Thu May 24 06:35:56 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * XSC/be/CXX/Source.cpp:
          Fixed conversion warnings

Thu May 24 06:05:57 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * XSC.mwc:
          Added the ace library to this workspace

        * XSC/utils/XSC_Utils.mpc:
          Added acelib again, the template code uses ace very minimal

Thu May 24 05:58:54 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * default.features:
          Removed this file.

Thu May 24 05:57:56 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/ccf_common.mpb:
          Added this file

Thu May 17 13:36:35 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * XSC/Parser.cpp:
          Some changes

Thu May 17 13:03:10 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * XSC/Parser.cpp:
          for a complex type restriction we now get into a new helper method
          which is currently empty

Wed May 16 19:20:05 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * XSC/Parser.cpp:
          Layout changes

Wed May 16 18:46:50 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * XSC/be/CXX/Inline.cpp:
          Prevent for self assignment, also fixes warning in the generated
          code

Wed May 16 16:33:59 UTC 2012  William R. Otte  <wotte@dre.vanderbilt.edu>

        * XSC/be/CXX/Header.cpp:
        * XSC/be/CXX/TypeInfoSource.cpp:
        * XSC/be/CXX/WriterHeader.cpp:

          Compilation error; compiler warnings.

Wed May 16 12:07:20 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * XSC/be/CXX/Header.cpp:
          Corrected generation of type for _ptr

Wed May 16 11:56:25 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * XSC/be/CXX/Header.cpp:
        * XSC/be/CXX/WriterSource.cpp:
        * XSCRT/XSCRT/Elements.hpp:
          Fixes to the generated code

Tue May 15 19:19:38 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
