@@ -1,3 +1,9 @@
+Thu May 24 06:40:02 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * XSC/be/CXX/Inline.cpp:
+        * XSC/be/CXX/Source.cpp:
+          Fixed conversion warnings
+
 Thu May 24 06:35:56 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * XSC/be/CXX/Source.cpp:
